# TerminalCommander

./: README  README.md
TerminalCommander/: .cproject  .gitignore  .project  CMakeLists.txt  README
TerminalCommander/Debug/: TerminalCommander  makefile  objects.mk  sources.mk
TerminalCommander/Debug/src/: .gitignore
TerminalCommander/assets/gui-xml/: ship-gui.xml
TerminalCommander/cmake_modules/: FindCEGUI.cmake  FindGLM.cmake
TerminalCommander/src/coding/: Bindings.cpp  Bindings.h  Programs.cpp
TerminalCommander/src/gui/: Dialogs.cpp  Dialogs.h  InfoPanel.cpp  InfoPanel.h  InputField.cpp  InputField.h  OutputConsole.cpp  OutputConsole.h  ShipInterface.cpp  ShipInterface.h
TerminalCommander/src/main/: SurfaceManager.cpp  SurfaceManager.h  TCApp.cpp  TCApp.h  TCAppInput.cpp  TerminalCommander.cpp  stdafx.h
TerminalCommander/src/ship/: Nav.cpp  Nav.h  Physics.cpp  Physics.h  ReactionWheels.cpp  ReactionWheels.h  Ship.cpp  Ship.h  Subsystem.cpp  Subsystem.h  Thrusters.cpp  Thrusters.h
TerminalCommander/src/utils/: Dials.cpp  Dials.h  Vec3.cpp  Vec3.h
